Updated navbar and added hero images - Added hero image/marketing message - Added action buttons - Fixed navbar and made it responsive

--- a/index.html
+++ b/index.html
@@ -10,36 +10,43 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md sticky-top">
-        <a href="index.html" class="navbar-brand">Don't Need Money To Code</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent">
-            <span class="navbar-toggler-icon fa fa-bars"></span>
+    <nav class="navbar navbar-expand-sm sticky-top">
+        <a href="#" class="navbar-brand">Don't Need Money To Code</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+            <i class="fa fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navContent">
+        <div class="collapse navbar-collapse" id="nucampNavbar">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Lectures</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Coding Resources</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Community</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Workshops</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
-                </li>
+                <li class="nav-item active"><a class="nav-link" href="#">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Lectures</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Community</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Workshops</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
             </ul>
         </div>
     </nav>
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container-fluid">
+            <h1>Coding should be accessible to <br> <em>everyone</em></h1>
+            <p>
+                Have you ever wanted to learn to program but thought that the barrier to entry was just too high?<br>
+                Has a lack of money and/or resources stopped you from trying to level up your life with coding?<br>
+                Don't Need Money To Code is a free resource housing lectures, in-person workshops and free resources for people from
+                all walks of life and all backgrounds. DNMTC is designed to meet you where you're at and get you to where you want to be.
+            </p>
+            <p>
+                Interested in becoming a member of DNMTC? Know someone who could use this knowledge?
+            </p>
+            <button class="btn">Sign Up</button>
+            <button class="btn">Work With Us</button>
+        </div>
+    </div>
+
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
