--- a/workshops.html
+++ b/workshops.html
@@ -14,11 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;300&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Don't Need Money To Code | Home</title>
+    <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm fixed-top">
-        <a href="#" class="navbar-brand">Don't Need Money To Code <></a>
+        <a href="index.html" class="navbar-brand">Don't Need Money To Code</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
             <i class="fa fa-bars"></i>
         </button>
@@ -26,9 +26,8 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="lectures.html">Lectures</a></li>
                 <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="workshops.html">Workshops</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Workshops</a></li>
                 <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a href="signin.html" class="nav-link">Sign up/Login</a></li>
             </ul>
         </div>
     </nav>
@@ -48,20 +47,6 @@
             <header class="home-header col-sm-12 text-center">About</header>
             <hr>
             <header class="display-4 col-sm-12 text-center"><em>Have you...</em></header>
-            <p class="col-sm-12 text-center" id="call">
-                ever wanted to learn to program but thought that the barrier to entry was just too high?<br>
-                Has a lack of money and/or resources stopped you from trying to level up your life with coding?<br>
-                Don't Need Money To Code is a free resource housing lectures, in-person workshops and free resources for people from
-                all walks of life and all backgrounds. <br> DNMTC is designed to meet you where you're at and get you to where you want to be.
-            </p>
-        </div>
-    </div>
-
-    <div class="container container-fluid" id="why-learn">
-        <div class="row row-content">
-            <header class="home-header col-sm-12 text-center">why you should learn to code</header>
-            <hr>
-            <header class="display-4 col-sm-12 text-center"><em>The many benefits of coding</em></header>
             <p class="col-sm-12 text-center" id="call">
                 ever wanted to learn to program but thought that the barrier to entry was just too high?<br>
                 Has a lack of money and/or resources stopped you from trying to level up your life with coding?<br>
